<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:iss_auto_cycle="true"
                app:iss_period="1500"
                android:background="@drawable/round_corners"
                app:iss_delay="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hey There!"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/themecolor"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_acadme"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:background="@drawable/light_puprle_bg"
                android:layout_gravity="center"

                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppinslight"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ABOUT ALIET"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/themecolor"
                android:textSize="30sp"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_aliet_logo"
                android:scaleType="centerCrop"
                android:layout_marginTop="16dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_aliet"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/light_puprle_bg"


                android:justificationMode="inter_word"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppinslight"
                android:textColor="@color/black"
                android:textSize="15sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/purple_700">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/curve"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/text_margin"
                        android:fontFamily="@string/bold"
                        android:text="DEPARTMENTS OF ALIET"
                        android:textColor="@color/themecolor"
                        android:textSize="20dp" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:layout_marginTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#fff"
                                android:orientation="vertical">

                                <com.google.android.material.button.MaterialButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:textColor="@color/white"
                                    android:clickable="false"
                                    android:text="Computer Science and Engineering"/>
                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@color/grey"/>

                                <com.google.android.material.button.MaterialButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:textColor="@color/white"
                                    android:clickable="false"

                                    android:text="Information Technology"

                                    />
                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@color/grey"/>

                                <com.google.android.material.button.MaterialButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:textColor="@color/white"

                                    android:clickable="false"
                                    android:text="Mechanical Engineering" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@color/grey"/>

                                <com.google.android.material.button.MaterialButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:textColor="@color/white"

                                    android:clickable="false"
                                    android:text="Electrical and Electronics Engineering"/>

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@color/grey"/>

                                <com.google.android.material.button.MaterialButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:textColor="@color/white"

                                    android:clickable="false"
                                    android:text="Electronics and Communication Engineering"/>

                            </LinearLayout>
                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="36dp"
                        android:fontFamily="@string/bold"
                        android:text="CONTACT DETAILS"
                        android:textColor="@color/purple_700"
                        android:textSize="@dimen/title_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/text_margin"
                        android:layout_marginTop="@dimen/text_margin"
                        android:text="Fr. Dr. A. Francis Xavier"
                        android:fontFamily="@string/bold"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/text_margin"
                        android:text="Director"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/text_margin"
                        android:fontFamily="@string/bold"
                        android:text="Andhra Loyola Institute of Engineering and Technology"
                        android:textColor="@color/grey1"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/text_margin"
                        android:fontFamily="@string/bold"
                        android:text="Polytechnic Post Office Vijayawada-520 008"
                        android:textColor="@color/grey1"
                        android:textSize="14dp" />





                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/text_margin"

                        android:fontFamily="@string/bold"
                        android:text="E-mail: alietvijayawada@aliet.ac.in"
                        android:textColor="@color/grey1"
                        android:textSize="14sp"
                        android:layout_marginBottom="@dimen/text_size"/>


                    <ImageView
                        android:id="@+id/map"
                        android:layout_width="wrap_content"
                        android:layout_height="270dp"
                        android:src="@drawable/ic_map2"
                        android:layout_marginBottom="@dimen/text_size"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
